compiler-core/src/parse/snapshots/gleam_core__parse__tests__case_list_pattern_after_spread.snap
---
source: compiler-core/src/parse/tests.rs
expression: "\nfn main() {\n    case somelist {\n        [..rest, last] -> 1\n        _ -> 2\n    }\n}\n"
---
error: Syntax error
  ┌─ /src/parse/error.gleam:4:10
  │
4 │         [..rest, last] -> 1
  │          ^^^^^^ I wasn't expecting other patterns after this spread

I was expecting the end of the list.
A spread can only be used to match on the entire end of a list.
It is not possible to extract items from the end of a list using pattern
matching because that would require walking through the entire list.
